# pys2index

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  environment-dev.yml  pyproject.toml  setup.py
.github/workflows/: pypipublish.yml  test.yml  test2.yml
cmake/: FindS2.cmake  Finds2.cmake
docs/: api.rst  conf.py  index.rst
include/pys2index/: box.hpp  s2pointindex.hpp
src/: main.cpp
tests/: test_s2pointindex.py
