[build-system]
requires = [
    "scikit-build-core",
    "pybind11",
]
build-backend = "scikit_build_core.build"

[project]
name = "pys2index"
version = "0.1.5"
description = "Python/NumPy compatible geographical index based on s2geometry"
keywords = ["python", "numpy", "s2geometry", "index"]
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Benoît Bovy"},
]
maintainers = [
    {name = "pys2index contributors"},
]
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.urls]
Repository = "https://github.com/benbovy/pys2index"

[project.optional-dependencies]
test = ["pytest>=6.0"]

[tool.scikit-build]
sdist.exclude = [
    ".clang-format",
    ".gitignore",
    ".pre-commit-config.yaml",
    ".github",
]
